# chip-ahoyto

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
examples/benchmark/: Cargo.toml
examples/benchmark/src/: main.rs
examples/sdl/: Cargo.toml  README.md
examples/sdl/src/: main.rs
examples/web/: .gitignore  .prettierrc  chip_ahoyto.d.ts  chip_ahoyto.js  chip_ahoyto_bg.wasm  chip_ahoyto_bg.wasm.d.ts  index.css  index.html  index.js  index.ts  package.json  tsconfig.json
examples/web/ts/: chip8.ts  index.ts
frontends/benchmark/: Cargo.toml
frontends/benchmark/src/: main.rs
frontends/sdl/: Cargo.toml  README.md
frontends/sdl/src/: data.rs  main.rs
frontends/web/: .parcelrc  index.html  index.ts  package.json
frontends/web/ts/: chip8.ts  palettes.ts
res/roms/: flip_8.ch8
src/: chip8.rs  chip8_classic.rs  chip8_neo.rs  info.rs  lib.rs  macros.rs  util.rs
