[package]
name = "chip-ahoyto"
version = "0.3.4"
authors = ["João Magalhães <joamag@gmail.com>"]
description = "CHIP-8 Emulator in Rust"
license = "Apache"
keywords = ["chip-8", "emulator", "rust"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]
quirks = []

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }

[profile.release]
debug = false
lto = true
opt-level = 3

[workspace]
members = [
    ".",
    "examples/benchmark",
    "examples/sdl",
]
