[package]
name = "chip-ahoyto"
description = "A CHIP-8 emulator in Rust."
version = "0.4.0"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
repository = "https://gitlab.stage.hive.pt/joamag/chip-ahoyto"
keywords = ["chip-8", "emulator", "rust"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]
quirks = []

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }

[profile.release]
debug = false
lto = true
opt-level = 3

[workspace]
members = [
    ".",
    "frontends/benchmark",
    "frontends/sdl",
]
