[package]
name = "chip-ahoyto-sdl"
version = "0.1.0"
authors = ["João Magalhães <joamag@gmail.com>"]
description = "CHIP-8 Emulator SDL (Desktop) Application"
license = "Apache-2.0"
keywords = ["chip-8", "emulator", "rust", "sdl"]
edition = "2018"

[dependencies.chip-ahoyto]
path = "../.."

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "72fa4d4630c0971eadea7d0a70045351ab13be9d"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[profile.release]
debug = false
lto = true
opt-level = 3
