[package]
name = "chip-ahoyto-benchmark"
version = "0.4.2"
authors = ["João Magalhães <joamag@gmail.com>"]
description = "CHIP-8 Benchmark application"
license = "Apache-2.0"
keywords = ["chip-8", "emulator", "rust", "benchmark"]
edition = "2018"

[dependencies]
time = { version = "0.3" }

[dependencies.chip-ahoyto]
path = "../.."
