[package]
name = "chip-ahoyto-sdl"
version = "0.4.2"
authors = ["João Magalhães <joamag@gmail.com>"]
description = "An SDL frontend for CHIP-Ahoyto"
license = "Apache-2.0"
keywords = ["chip-8", "emulator", "rust", "sdl"]
edition = "2018"

[dependencies.chip-ahoyto]
path = "../.."

[dependencies.sdl2]
version = "0.35"
features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]

# If the vcpkg version of SDL2 does not work (eg: display not found error)
# then try dynamic linking SDL2 using the following features
# features = ["ttf", "image", "gfx", "mixer", "bundled"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "501db0f17ef6df184fcdbfbe0f87cde2313b6ab1"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
